--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -262,6 +262,8 @@ body > nav > div.navbar-header > button {
   }
   #bs-primary-navbar-collapse-1 {
     font-size: 1.5em;
+  }
+  #bs-primary-navbar-collapse-1 > div {
     padding-bottom: 1em;
   }
   #bs-primary-navbar-collapse-1 > div > form {
